--- a/css/styles.css
+++ b/css/styles.css
@@ -444,6 +444,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: 0;
+  background: url('../IMG-20251117-WA0045(1).jpg') center/cover no-repeat;
 }
 
 .hero-video {
